Regression from 2.7 Series: Youre not allowed to paint on hidden objects. #76865

Closed
opened 2020-05-18 19:38:15 +02:00 by Julian Mohr · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-18 11:29, hash: 18dd289e1a
Worked: (2.79)

Short description of error
2.79 allows to paint vertex and weight with an in editmode hidden object.

Exact steps for others to reproduce the error
hide a object in edit mode.
switch to weight or vertex paint and youre not able to paint anything.

2.79:
2020-05-18 19-17-15.mp4

Since 2.8:
2020-05-18 19-21-49.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-18 11:29, hash: `18dd289e1a` Worked: (2.79) **Short description of error** 2.79 allows to paint vertex and weight with an in editmode hidden object. **Exact steps for others to reproduce the error** hide a object in edit mode. switch to weight or vertex paint and youre not able to paint anything. 2.79: [2020-05-18 19-17-15.mp4](https://archive.blender.org/developer/F8541633/2020-05-18_19-17-15.mp4) Since 2.8: [2020-05-18 19-21-49.mp4](https://archive.blender.org/developer/F8541636/2020-05-18_19-21-49.mp4)
Author

Added subscriber: @Jewls

Added subscriber: @Jewls
Author

Eventough this is a regression i belive the 2.8 way to handel this is better and more logical.
But it could lead to some confusion like why am i not able to paint on my object?
Any developer thoughts on this issue?

Eventough this is a regression i belive the 2.8 way to handel this is better and more logical. But it could lead to some confusion like why am i not able to paint on my object? Any developer thoughts on this issue?

This issue was referenced by b96ccb5126

This issue was referenced by b96ccb5126b29fa9ff014103e350cfa3c94d376a
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This has been reported before, see #71218 (Hidden faces showing up on weight painting mode, but not able to paint on them.), will merge these reports...

This has been reported before, see #71218 (Hidden faces showing up on weight painting mode, but not able to paint on them.), will merge these reports...
Member

Closed as duplicate of #71218

Closed as duplicate of #71218

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76865
No description provided.