Fix T76865: Vertex paint draws hidden but cannot be painted onto